--- a/.github/workflows/hello_bot.yml
+++ b/.github/workflows/hello_bot.yml
@@ -2,7 +2,8 @@ name: Telegram Hello Bot
 
 on:
   schedule:
-    - cron: '30 7 * * *'  # Runs every day at 7:30 AM UTC (which is 1:00 PM IST)
+    - cron: '30 1 * * *'  # Runs every day at 1:30 AM UTC (which is 7:00 AM IST)
+    - cron: '30 11 * * *' # Runs every day at 11:30 AM UTC (which is 5:00 PM IST)
   workflow_dispatch:  # Allows manual triggering
 
 jobs:
